Make syntax-highlighted code prettier in sockettester

--- a/static/style.css
+++ b/static/style.css
@@ -3,3 +3,6 @@ label {display: block;}
 input {display: block;}
 #sendmessage {display: none;}
 li {cursor: pointer;}
+pre {
+    border: 1px black dotted;
+}
