--- a/static/vs.css
+++ b/static/vs.css
@@ -2,7 +2,7 @@
 Visual Studio-like style based on original C# coloring by Jason Diamond <jason@diamond.name>
 */
 .hljs {
-  display: block;
+  display: inline-block;
   overflow-x: auto;
   padding: 0.5em;
   background: white;
