Basic form styling

--- a/modules/admin/templates/admin.html
+++ b/modules/admin/templates/admin.html
@@ -1,1 +1,11 @@
-Hi! You've logged in.
+<!doctype HTML>
+
+<head>
+  <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
+  <link rel="stylesheet" href="/admin/admin.css" />
+</head>
+
+<body>
+  <h1>Administration panel</h1>
+  <a href="/admin/permissions"><button>Permissions</button></a>
+</body>
