--- a/modules/admin/templates/login.html
+++ b/modules/admin/templates/login.html
@@ -2,11 +2,11 @@
 
 <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
 <link rel="stylesheet" href="/admin/admin.css" />
-
+<h1>Sign in</h1>
 <form method='POST' action='/admin/login'>
   <label for='apikey'>API key</label>
   <input name='apikey' />
-  <label for='secretkey'>API key</label>
+  <label for='secretkey'>Secret key</label>
   <input name='secretkey' />
   <input type="submit" value='login' />
 </form>
