--- a/modules/admin/templates/admin.html
+++ b/modules/admin/templates/admin.html
@@ -1,11 +1,15 @@
 <!doctype HTML>
+<html>
 
 <head>
-  <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
-  <link rel="stylesheet" href="/admin/admin.css" />
+
+<link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
+<link rel="stylesheet" href="/admin/admin.css" />
+<script src="/admin/jsonform/deps/jquery.min.js"></script>
+<script src="/admin/adminui.js"></script>
 </head>
 
 <body>
-  <h1>Administration panel</h1>
-  <a href="/admin/permissions"><button>Permissions</button></a>
 </body>
+
+</html>
