--- a/modules/admin/templates/login.html
+++ b/modules/admin/templates/login.html
@@ -1,12 +1,20 @@
-<title>Admin</title>
+<title>Sign in</title>
 
 <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
 <link rel="stylesheet" href="/admin/admin.css" />
+<style>
+
+  html {background-color:#3D79BD;}
+  body {margin:auto; width:300px; background-color: transparent; color:white;}
+  h1 {text-align: center;}
+
+</style>
+
 <h1>Sign in</h1>
 <form method='POST' action='/admin/login'>
   <label for='apikey'>API key</label>
   <input name='apikey' />
   <label for='secretkey'>Secret key</label>
   <input name='secretkey' />
-  <input type="submit" value='login' />
+  <input class="btn" type="submit" value='login' />
 </form>
