--- a/modules/admin/templates/permissions.html
+++ b/modules/admin/templates/permissions.html
@@ -7,6 +7,8 @@
   <script type="text/javascript" src="jsonform/deps/underscore.js"></script>
   <link rel="stylesheet" style="text/css" href="jsonform/deps/opt/bootstrap.css" />
   <link rel="stylesheet" href="/admin/admin.css" />
+    <script src="/admin/adminui.js"></script>
+
   
 </head>
 
