Frontend folder structure

--- a/sites/default/configurations/frontend/templates/new.html
+++ b/sites/default/configurations/frontend/templates/new.html
@@ -11,7 +11,10 @@
   <section ng-controller="C" entities="<<entityType>>" queries="_id:IS:<<entityID>>">
 
     <span>
-{{data.new[0].body}}</span>
+      
+{{data.new[0].body}}
+    
+    </span>
 
   </section>
 
