CKeditor file uploading

--- a/modules/admin/templates/create.html
+++ b/modules/admin/templates/create.html
@@ -65,7 +65,11 @@
         $('form').jsonForm(data);
 
         $("textarea").each(function() {
-          CKEDITOR.replace(this);
+          CKEDITOR.replace(this, {
+
+            filebrowserUploadUrl: '/admin/file/upload'
+
+          });
         });
 
         for (var i in CKEDITOR.instances) {
