Redirect to content list on edit/create entity

--- a/modules/admin/templates/create.html
+++ b/modules/admin/templates/create.html
@@ -55,7 +55,7 @@
 
             $.post("/entity/create/" + type, values, function(data, err) {
 
-              console.log(data);
+              document.location.href = "/admin/entitylist/" + type;
 
             })
 
