--- a/modules/admin/static/admin.css
+++ b/modules/admin/static/admin.css
@@ -1,6 +1,6 @@
 header {border-style:solid; border-width:0 0 2px 0; width:100%; border-color:#3D79BD;}
 h1, h2 {text-align: center; color:#3D79BD;}
-body {padding:10px; font-size:15px;}
+body {font-size:15px;}
 a {color:#3D79BD;}
 img {max-width: 100%;}
 table {background-color: transparent;}
@@ -9,3 +9,26 @@ ul.main-menu {display:inline-block;}
 .main-menu li {display: inline-block; margin:0 5px 0 5px;}
 #permissions td {width:300px; text-align: center;}
 #permissions td.permission {text-align: left;}
+
+#login-page {
+    width:100%;
+    height:100%;
+    background-color: #6258A4;
+    color:#fff;
+    padding-top:30px;
+    text-align:center;
+}
+#login-logo {
+    font-size: 200px;
+    display:inline-block;
+    margin-right: 20px;
+    line-height: 1;
+}
+#login-form {
+    display:inline-block;
+    text-align:left;
+}
+#login-form h1 {
+        text-align:left;
+        color:#fff;
+    }
