--- a/modules/admin/templates/entitylist.html
+++ b/modules/admin/templates/entitylist.html
@@ -12,7 +12,7 @@
     <script src="/admin/jsonform/deps/jquery.min.js"></script>
 
 <!--  <script src="/entity_views/entity-viewer.js"></script>-->
-  <script src="/static/templates.js"></script>
+  <script src="/entity_views/templates.js"></script>
 
 
   <link rel="stylesheet" href="/admin/admin.css" />
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  
+
   <h1>List of <<entitytype>> entities</h1>
 
   <section ng-controller="C" data-entities="<<entitytype>>">
