--- a/modules/admin/templates/blockedit.html
+++ b/modules/admin/templates/blockedit.html
@@ -1,12 +1,9 @@
 <html>
 
 <head>
-  <script src="/static/Sortable.js"></script>
-
   <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
   <link rel="stylesheet" href="/admin/admin.css" />
   <script src="/admin/jsonform/deps/jquery.min.js"></script>
-  <script src="/admin/regions.js"></script>
 
   <script src="/admin/adminui.js"></script>
 
@@ -14,9 +11,9 @@
 
 <body>
 
-  <h1>Edit block <<blockname>></h1>
+  <h1>Edit block [[blockname]]</h1>
 
-  [[[form <<blockid>>]]]
+  [[[form [[blocktype]]]]]
 
   </body>
 </html>
