Add sortable library to admin

--- a/modules/admin/templates/regions.html
+++ b/modules/admin/templates/regions.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <script src="/static/Sortable.js"></script>
+  <script src="/admin/Sortable.js"></script>
 
   <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
   <link rel="stylesheet" href="/admin/admin.css" />
