Move login form to user.js

--- a/modules/admin_ui/templates/admin_login.html
+++ b/modules/admin_ui/templates/admin_login.html
@@ -53,7 +53,7 @@
       <!-- Tab panes -->
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="username">
-          [[[form adminlogin]]]
+          [[[form login]]]
         </div>
 
         <div role="tabpanel" class="tab-pane" id="api">
