--- a/modules/admin_ui/templates/admin_entity_create.html
+++ b/modules/admin_ui/templates/admin_entity_create.html
@@ -59,7 +59,7 @@
 
             $.post("/entity/create/" + type, values, function(data, err) {
 
-              document.location.href = "/admin2/entitylist/" + type;
+              document.location.href = "/admin/entitylist/" + type;
 
             })
 
