--- a/modules/admin_ui/templates/admin_regions_list.html
+++ b/modules/admin_ui/templates/admin_regions_list.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
   <link rel="stylesheet" href="/admin/admin.css" />
   <script src="/admin/jsonform/deps/jquery.min.js"></script>
-  <script src="/admin2/regions.js"></script>
+  <script src="/admin/regions.js"></script>
 
   <script src="/admin/adminui.js"></script>
 
