--- a/modules/admin_ui/templates/admin.html
+++ b/modules/admin_ui/templates/admin.html
@@ -1,5 +1,18 @@
+<!doctype html>
+
+<html>
+
+<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+<link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
+<link rel="stylesheet" href="/admin/admin.css" />
+
+<body>
+
 <!--- This is intended as a general wrapper for all admin pages. --->
 
 [[[menu admin_toolbar]]]
 
 [[[ADMINCONTENT]]]
+
+</body>
+</html>
