API key/Secret key login

--- a/modules/admin_ui/templates/admin_login.html
+++ b/modules/admin_ui/templates/admin_login.html
@@ -57,7 +57,7 @@
         </div>
 
         <div role="tabpanel" class="tab-pane" id="api">
-          [[[form example]]]
+          [[[form apikey_login]]]
         </div>
       </div>
 
