CSS tweaks for admin

--- a/modules/admin_ui/templates/admin.html
+++ b/modules/admin_ui/templates/admin.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/admin/admin.css" />
+<link rel="stylesheet" href="/admin/admin_menu.css" />
 
 <body>
 
