--- a/modules/admin_ui/static/admin.css
+++ b/modules/admin_ui/static/admin.css
@@ -1,46 +1,78 @@
-header {border-style:solid; border-width:0 0 2px 0; width:100%; border-color:#3D79BD;}
-h1, h2 {text-align: center; color:#3D79BD;}
-body {font-size:15px;}
-a {color:#3D79BD;}
-img {max-width: 100%;}
-table {background-color: transparent;}
-#logo {width:70px; display: inline-block; margin-bottom:5px;}
-ul.main-menu {display:inline-block;}
-.main-menu li {display: inline-block; margin:0 5px 0 5px;}
-#permissions td {width:300px; text-align: center;}
-#permissions td.permission {text-align: left;}
+header {
+  border-style: solid;
+  border-width: 0 0 2px 0;
+  width: 100%;
+  border-color: #6258A4;
+}
+
+h1,
+h2 {
+  text-align: center;
+  color: #6258A4;
+}
+body {
+  font-size: 15px;
+}
+a {
+  color: #6258A4;
+}
+img {
+  max-width: 100%;
+}
+table {
+  background-color: transparent;
+}
+#logo {
+  width: 70px;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+ul.main-menu {
+  display: inline-block;
+}
+.main-menu li {
+  display: inline-block;
+  margin: 0 5px 0 5px;
+}
+#permissions td {
+  width: 300px;
+  text-align: center;
+}
+#permissions td.permission {
+  text-align: left;
+}
 tr#roles {
-    color: #fff;
-    background-color: rebeccapurple;
+  color: #fff;
+  background-color: #6258A4;
 }
 .permission-row:nth-child(odd) {
-    background-color: #F0E1FF;
+  background-color: #E9E6FF;
 }
-
 #login-page {
-    width:100%;
-    height:100%;
-    background-color: #6258A4;
-    color:#fff;
-    padding-top:30px;
-    text-align:center;
+  width: 100%;
+  height: 100%;
+  background-color: #6258A4;
+  color: #fff;
+  padding-top: 30px;
+  text-align: center;
 }
 #login-logo {
-    font-size: 200px;
-    display:inline-block;
-    margin-right: 20px;
-    line-height: 1;
+  font-size: 200px;
+  display: inline-block;
+  margin-right: 20px;
+  line-height: 1;
 }
 #login-form {
-    display:inline-block;
-    text-align:left;
+  display: inline-block;
+  text-align: left;
 }
 #login-form h1 {
-        text-align:left;
-        color:#fff;
-    }
+  text-align: left;
+  color: #fff;
+}
 
 /* Regions page */
+
 .region {
   background-color: lightgray;
   list-style-type: none;
@@ -48,19 +80,15 @@ tr#roles {
   padding-bottom: 30px;
   margin: 10px;
 }
-
 .region-blocks {
   min-height: 20px;
 }
-
 .region-block__options {
   list-style-type: none;
 }
-
 .region-blocks .region-block {
   background-color: #f0f0f0;
 }
-
 .region-block__add {
   cursor: pointer;
 }
