Error page template rendering

--- a/modules/frontend/templates/404.html
+++ b/modules/frontend/templates/404.html
@@ -25,7 +25,7 @@
   <div class="main-container">
 
     <div class="iris-description">
-      <h1>It works! [% %]</h1>
+      <h1>It works! {{ url }}</h1>
 
       <br />
 
