--- a/modules/frontend/templates/404.html
+++ b/modules/frontend/templates/404.html
@@ -31,7 +31,7 @@
   <div class="main-container">
 
     <div class="iris-description">
-      <h1>It works! [% url %]</h1>
+      <h1>It works!/h1>
 
       <br />
 
