Fix entity edit/delete links

--- a/modules/admin_ui/templates/admin_entitylist.html
+++ b/modules/admin_ui/templates/admin_entitylist.html
@@ -12,8 +12,8 @@
       <tr>
         <td>[% _id %]</td>
         <td>[% title %]</td>
-        <td><a href="/admin/edit/page/[% _id %]">Edit</a></td>
-        <td><a href="/admin/delete/page/[% _id %]">Delete</a></td>
+        <td><a href="/admin/edit/[% entityType %]/[% _id %]">Edit</a></td>
+        <td><a href="/admin/delete/[% entityType %]/[% _id %]">Delete</a></td>
       </tr>
       [% /entities %]
     </tbody>
