More form and region tweaks

--- a/modules/admin_ui/templates/admin.html
+++ b/modules/admin_ui/templates/admin.html
@@ -2,17 +2,28 @@
 
 <html>
 
+<!-- JSON Form bits -->
+
+<script src="/admin/jsonform/deps/jquery.min.js"></script>
+<script src="/admin/jsonform/deps/underscore-min.js"></script>
+<script src="/admin/jsonform/deps/opt/jquery.ui.custom.js"></script>
+<script src="/admin/jsonform/deps/opt/bootstrap-dropdown.js"></script>
+<script src="/admin/jsonform/deps/opt/bootstrap-typeahead.js"></script>
+<script src="/admin/jsonform/deps/opt/bootstrap-tagsinput.min.js"></script>
+<script src="/admin/jsonform/deps/opt/spectrum.js"></script>
+<script src="/admin/jsonform/deps/opt/jquery.transloadit2.js"></script>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="/admin/jsonform/deps/jquery.min.js"></script>
 <link rel="stylesheet" href="/admin/admin.css" />
 <link rel="stylesheet" href="/admin/admin_menu.css" />
 
 <body>
 
-<!--- This is intended as a general wrapper for all admin pages. --->
+  <!--- This is intended as a general wrapper for all admin pages. --->
 
-[[[menu admin_toolbar]]]
-
-[[[ADMINCONTENT]]]
+  [[[menu admin_toolbar]]] [[[ADMINCONTENT]]]
 
 </body>
+
 </html>
