Move duplicated admin includes into small files

--- a/modules/admin_ui/templates/admin.html
+++ b/modules/admin_ui/templates/admin.html
@@ -2,21 +2,14 @@
 
 <html>
 
-<!-- JSON Form bits -->
+<!-- CSS and JS common to all pages --->
 
-<script src="/admin/jsonform/deps/jquery.min.js"></script>
-<script src="/admin/jsonform/deps/opt/jquery.ui.custom.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-dropdown.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-typeahead.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-tagsinput.min.js"></script>
-<script src="/admin/jsonform/deps/opt/spectrum.js"></script>
-<script src="/admin/jsonform/deps/opt/jquery.transloadit2.js"></script>
-  
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="/admin/admin.css" />
 <link rel="stylesheet" href="/admin/admin_menu.css" />
 
 <script src="/admin/jsonform/deps/jquery.min.js"></script>
+<script type="text/javascript" src="/admin/bootstrap/js/bootstrap.min.js"></script>
 
 <body>
 
