--- a/modules/admin_ui/templates/admin_login.html
+++ b/modules/admin_ui/templates/admin_login.html
@@ -1,20 +1,7 @@
 <title>Sign in</title>
 
-<link rel="stylesheet" style="text/css" href="/admin/bootstrap/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/admin/admin.css" />
 
-<script type="text/javascript" src="/admin/jsonform/deps/jquery.min.js"></script>
-<script type="text/javascript" src="/admin/bootstrap/js/bootstrap.min.js"></script>
-
-<script src="/admin/jsonform/deps/underscore-min.js"></script>
-<script src="/admin/jsonform/deps/opt/jquery.ui.custom.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-dropdown.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-typeahead.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-tagsinput.min.js"></script>
-<script src="/admin/jsonform/deps/opt/spectrum.js"></script>
-<script src="/admin/jsonform/deps/opt/jquery.transloadit2.js"></script>
-
-<script src="/admin/jsonform/lib/jsonform.js"></script>
+[[[file admin_include_jsonform]]]
 
 <script>
   $('#login-tabs a').click(function(e) {
