--- a/modules/admin_ui/templates/admin_entity_edit.html
+++ b/modules/admin_ui/templates/admin_entity_edit.html
@@ -1,15 +1,5 @@
-<script src="//cdn.ckeditor.com/4.5.3/standard/ckeditor.js"></script>
-
-<script src="/admin/jsonform/deps/jquery.min.js"></script>
-<script src="/admin/jsonform/deps/underscore-min.js"></script>
-<script src="/admin/jsonform/deps/opt/jquery.ui.custom.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-dropdown.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-typeahead.js"></script>
-<script src="/admin/jsonform/deps/opt/bootstrap-tagsinput.min.js"></script>
-<script src="/admin/jsonform/deps/opt/spectrum.js"></script>
-<script src="/admin/jsonform/deps/opt/jquery.transloadit2.js"></script>
-
-<script src="/admin/jsonform/lib/jsonform.js"></script>
+[[[file admin_include_ckeditor]]]
+[[[file admin_include_jsonform]]]
 
 <h1></h1>
 
