--- a/core_modules/frontend/templates/html.html
+++ b/core_modules/frontend/templates/html.html
@@ -1,10 +1,8 @@
-{{=[% %]=}}
-
 <!doctype HTML>
 <html>
 
 <head>
-  <title>[% current.title %]</title>
+  <title>{{current.title}}</title>
 
 
 </head>
