Make admin module use universal static folder system

--- a/modules/admin_ui/templates/admin.html
+++ b/modules/admin_ui/templates/admin.html
@@ -5,11 +5,11 @@
 <!-- CSS and JS common to all pages --->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="/admin/admin.css" />
-<link rel="stylesheet" href="/admin/admin_menu.css" />
+<link rel="stylesheet" href="/modules/admin_ui/admin.css" />
+<link rel="stylesheet" href="/modules/admin_ui/admin_menu.css" />
 
-<script src="/admin/jsonform/deps/jquery.min.js"></script>
-<script type="text/javascript" src="/admin/bootstrap/js/bootstrap.min.js"></script>
+<script src="/modules/admin_ui/jsonform/deps/jquery.min.js"></script>
+<script type="text/javascript" src="/modules/admin_ui/bootstrap/js/bootstrap.min.js"></script>
 
 <body>
 
