--- a/modules/admin_ui/templates/admin_logs.html
+++ b/modules/admin_ui/templates/admin_logs.html
@@ -3,10 +3,10 @@
 
 <head>
 
-  <link rel="stylesheet" style="text/css" href="/admin/jsonform/deps/opt/bootstrap.css" />
-  <link rel="stylesheet" href="/admin/admin.css" />
-  <script src="/admin/adminui.js"></script>
-  <script src="/admin/jquery.dynatable.js"></script>
+  <link rel="stylesheet" style="text/css" href="/modules/admin_ui/jsonform/deps/opt/bootstrap.css" />
+  <link rel="stylesheet" href="/modules/admin_ui/admin.css" />
+  <script src="/modules/admin_ui/adminui.js"></script>
+  <script src="/modules/admin_ui/jquery.dynatable.js"></script>
   <link rel="stylesheet" href="jquery.dynatable.css" />
 
   <style>
