--- a/modules/admin_ui/templates/admin_schema_edit.html
+++ b/modules/admin_ui/templates/admin_schema_edit.html
@@ -9,7 +9,7 @@
 <script>
   $(document).ready(function() {
 
-    $.get("/admin/api/schema/fieldtypes", function(data) {
+    $.get("/modules/admin_ui/api/schema/fieldtypes", function(data) {
 
       var fields = JSON.parse(data).response;
 
@@ -89,7 +89,7 @@
 
       window.type = urlparts[urlparts.length - 1];
 
-      $.get("/admin/api/schema/edit/" + type + "/form", function(data, errors) {
+      $.get("/modules/admin_ui/api/schema/edit/" + type + "/form", function(data, errors) {
 
         schema.value = {
           "entityname": type,
@@ -124,11 +124,11 @@
           "secretkey": "letmein"
         };
 
-        $.post("/admin/api/schema/edit/" + type, values, function(data, status) {
+        $.post("/modules/admin_ui/api/schema/edit/" + type, values, function(data, status) {
 
           if (status === "success") {
 
-            document.location.href = "/admin/entities";
+            document.location.href = "/modules/admin_ui/entities";
 
           };
 
