--- a/core_modules/frontend/templates/404.html
+++ b/core_modules/frontend/templates/404.html
@@ -27,7 +27,7 @@
   <div class="main-container">
 
     <div class="iris-description">
-      <h1>It works!/h1>
+      <h1>It works!</h1>
 
       <br />
 
