Slightly clearer notes on 404

--- a/core_modules/frontend/templates/404.html
+++ b/core_modules/frontend/templates/404.html
@@ -33,7 +33,7 @@
 
       <p>Hi there! Iris is serving up this website, but there doesn't appear to be anything ready to use as a front page. To set a front page, go to the <a href="/admin">site administration section</a>, create a new <b>page</b> entity and give it a path of '/'.</p>
 
-      <p>To replace this page or customize this message, have a look at <b>404.html</b> in your theme.</p>
+      <p>To replace this page or customize this message, have a look at <b>404.html</b> in /core_modules/frontend/templates. Copy this file to your theme's templates directory and make any changes there.</p>
 
       <br />
 
