--- a/modules/admin_ui/templates/admin_entity_types.html
+++ b/modules/admin_ui/templates/admin_entity_types.html
@@ -1,5 +1,5 @@
 <script>
-  $.get("/modules/admin_ui/api/entitytypes", function(data, err) {
+  $.get("/admin/api/entitytypes", function(data, err) {
 
     $.each(data, function(index, element) {
 
