--- a/modules/admin_ui/templates/admin_entity_create.html
+++ b/modules/admin_ui/templates/admin_entity_create.html
@@ -17,7 +17,7 @@
 
     window.type = urlparts[urlparts.length - 1];
 
-    $.get('/modules/admin_ui/api/create/' + window.type + "/form").done(function(data) {
+    $.get('/admin/api/create/' + window.type + "/form").done(function(data) {
 
       data.onSubmit = function(errors, values) {
 
