--- a/modules/admin_ui/templates/admin_entitylist.html
+++ b/modules/admin_ui/templates/admin_entitylist.html
@@ -10,8 +10,8 @@
       <tr>
         <td>{{_id}}</td>
         <td>{{title}}</td>
-        <td><a href="/modules/admin_ui/edit/{{ entityType }}/{{ _id }}">Edit</a></td>
-        <td><a href="/modules/admin_ui/delete/{{ entityType }}/{{ _id }}">Delete</a></td>
+        <td><a href="/admin/edit/{{ entityType }}/{{ _id }}">Edit</a></td>
+        <td><a href="/admin/delete/{{ entityType }}/{{ _id }}">Delete</a></td>
       </tr>
       {{/each}}
     </tbody>
