--- a/core_modules/frontend/templates/403.html
+++ b/core_modules/frontend/templates/403.html
@@ -3,8 +3,8 @@
 <html>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="/admin/admin.css" />
-<link rel="stylesheet" href="/admin/admin_menu.css" />
+<link rel="stylesheet" href="/modules/admin_ui/admin.css" />
+<link rel="stylesheet" href="/modules/admin_ui/admin_menu.css" />
 
 <title>Iris</title>
 
