Use parseTemplateFile in admin routing

--- a/modules/admin_ui/templates/admin_wrapper.html
+++ b/modules/admin_ui/templates/admin_wrapper.html
@@ -15,7 +15,7 @@
 
   <!--- This is intended as a general wrapper for all admin pages. --->
 
-  [[[menu admin_toolbar]]] [[[ADMINCONTENT]]]
+  [[[menu admin_toolbar]]] [[[MAINCONTENT]]]
 
 </body>
 
