styling entity types page

--- a/modules/admin_ui/templates/admin.html
+++ b/modules/admin_ui/templates/admin.html
@@ -15,7 +15,8 @@
 
   <!--- This is intended as a general wrapper for all admin pages. --->
 
-  [[[menu admin_toolbar]]] [[[ADMINCONTENT]]]
+  [[[menu admin_toolbar]]]
+    <section id="main">[[[ADMINCONTENT]]]</section>
 
 </body>
 
