--- a/modules/admin_ui/static/admin.css
+++ b/modules/admin_ui/static/admin.css
@@ -22,6 +22,16 @@ img {
 table {
   background-color: transparent;
 }
+th, td {
+  padding:10px;
+}
+tr:nth-child(odd) {
+  background-color: #E9E6FF;
+}
+#main {
+  max-width:1120px;
+  margin:auto;
+}
 #logo {
   width: 70px;
   display: inline-block;
@@ -41,13 +51,11 @@ ul.main-menu {
 #permissions td.permission {
   text-align: left;
 }
-tr#roles {
+tr#roles, thead tr {
   color: #fff;
   background-color: #6258A4;
 }
-.permission-row:nth-child(odd) {
-  background-color: #E9E6FF;
-}
+
 #login-page {
   width: 100%;
   height: 100%;
@@ -93,3 +101,37 @@ tr#roles {
 .region-block__add {
   cursor: pointer;
 }
+
+/* Entities page */
+#entity-types {
+  width:100%;
+}
+#entity-types .dropdown{
+    overflow: hidden;
+    background: #fff;
+    width: auto;
+    display: inline-block;
+    padding:3px 10px 0 10px;
+    border-radius:10px;
+    border:1px solid #999;
+    position:absolute;
+    margin-top:-15px;
+    z-index:2;
+}
+#entity-types .dropdown.closed {
+    height:30px;
+    z-index:1;
+}
+#entity-types .glyphicon {
+    float:left;
+    padding-top:3px;
+    cursor:pointer;
+}
+#entity-types ul {
+    list-style:none;
+    padding-left:25px;
+}
+#entity-types ul a {
+    white-space:nowrap;
+}
+
