fix admin wrapper

--- a/modules/admin_ui/templates/admin_entity_types.html
+++ b/modules/admin_ui/templates/admin_entity_types.html
@@ -16,6 +16,13 @@
 
 <h1>Edit entity types</h1>
 <h2>Add/modify fields</h2>
-<table id="entity-types"></table>
+<table id="entity-types">
+  <thead>
+    <tr>
+      <td>Entity name</td>
+      <td>Options</td>
+    </tr>
+  </thead>
+</table>
 <a class="btn btn-primary" href="/admin/schema/create">Create a new entity type</a>
 
