various admin styling

--- a/modules/admin_ui/static/admin.css
+++ b/modules/admin_ui/static/admin.css
@@ -21,11 +21,12 @@ img {
 }
 table {
   background-color: transparent;
+    margin:20px 0;
 }
 th, td {
   padding:10px;
 }
-tr:nth-child(odd) {
+tr:nth-child(even) {
   background-color: #E9E6FF;
 }
 #main {
