--- a/modules/admin_ui/templates/admin_permissions.html
+++ b/modules/admin_ui/templates/admin_permissions.html
@@ -48,7 +48,7 @@
 
       });
 
-      $("#permissions").append("<input id='savePermissions' type='submit' value='save'/>");
+      $("<input id='savePermissions' type='submit' class=\"btn btn-primary\" value='save'/>").insertAfter('#permissions');
 
     });
 
