--- a/modules/admin_ui/templates/admin_entity_types.html
+++ b/modules/admin_ui/templates/admin_entity_types.html
@@ -3,7 +3,7 @@
 
     $.each(data, function(index, element) {
 
-      $("#entity-types").append("<tr><td><h3>"+element+"</h3></td><td><div class=\"dropdown closed\"><span class=\"glyphicon glyphicon-chevron-down\"></span><ul><li><a href='/admin/entitylist/"+element+"'>View content</a></li><li><a href='/admin/create/"+element+"'>Create new</a></li><li><a href='/admin/schema/edit/"+element+"'>Edit entity fields</a></li></ul></div></td></tr>");
+      $("#entity-types").append("<tr><td>"+element+"</td><td><div class=\"dropdown closed\"><span class=\"glyphicon glyphicon-chevron-down\"></span><ul><li><a href='/admin/entitylist/"+element+"'>View content</a></li><li><a href='/admin/create/"+element+"'>Create new</a></li><li><a href='/admin/schema/edit/"+element+"'>Edit entity fields</a></li></ul></div></td></tr>");
 
     });
 
@@ -19,8 +19,8 @@
 <table id="entity-types">
   <thead>
     <tr>
-      <td>Entity name</td>
-      <td>Options</td>
+      <th>Entity name</th>
+      <th>Options</th>
     </tr>
   </thead>
 </table>
