Add api key form to 403

--- a/core_modules/frontend/templates/403.html
+++ b/core_modules/frontend/templates/403.html
@@ -32,6 +32,10 @@
       <p>You don't have permission to access this page.</p>
       
       [[[form login]]]
+      
+      <hr />
+      
+      [[[form apikey_login]]]
 
     </div>
 
