--- a/modules/admin_ui/templates/admin_entitylist.html
+++ b/modules/admin_ui/templates/admin_entitylist.html
@@ -1,5 +1,5 @@
 <table class="table" id="entity-list">
-  
+
   <tbody>
 
     <th>ID</th>
@@ -12,7 +12,7 @@
     <br />
 
     <tr>
-      <td>{{_id}}</td>
+      <td>{{#if path}}<a href="{{path}}">{{_id}}</a>{{else}}{{_id}}{{/if}}</td>
       <td>{{title}}</td>
       <td><a href="/admin/edit/{{ entityType }}/{{ _id }}">Edit</a></td>
       <td><a href="/admin/delete/{{ entityType }}/{{ _id }}">Delete</a></td>
