Views block edit form

--- a/modules/admin_ui/templates/admin_blockform.html
+++ b/modules/admin_ui/templates/admin_blockform.html
@@ -1,1 +1,11 @@
-[[[form blockForm_{{blocktype}}]]]
+{{#if blockid}}
+
+[[[form blockForm_{{blocktype}},{{blockid}}]]]
+
+{{else}}
+
+[[[form blockForm_{{blocktype}},{{blockid}}]]]
+
+{{/if}} 
+
+
