--- a/modules/admin_ui/templates/admin_blockslist.html
+++ b/modules/admin_ui/templates/admin_blockslist.html
@@ -1,3 +1,9 @@
 <h1>Blocks</h1>
 
+<ul>
+
+  {{#each blocks}} {{#each this}} <li>{{this.blockTitle}} ({{this.blockType}}) - <a href="/admin/blocks/edit/{{this.blockType}}/{{this.blockTitle}}">edit</a></li> {{/each}} {{/each}}
+
+</ul>
+
 [[[form newBlockForm]]]
