--- a/modules/admin_ui/templates/admin_schema_edit.html
+++ b/modules/admin_ui/templates/admin_schema_edit.html
@@ -1,4 +1,3 @@
-
 [[[file admin_include_jsonform]]]
 
 <h1></h1>
@@ -119,12 +118,7 @@
         console.error(errors);
       } else {
 
-        values.credentials = {
-          "apikey": "letmein",
-          "secretkey": "letmein"
-        };
-
-        $.post("/admin/api/schema/edit/" + type, values, function(data, status) {
+        $.post("/admin/api/schema/save", values, function(data, status) {
 
           if (status === "success") {
 
