Field collection schema forms (not yet recursive)

--- a/modules/admin_ui/templates/admin_schema_create.html
+++ b/modules/admin_ui/templates/admin_schema_create.html
@@ -109,7 +109,7 @@
       } else {
 
         
-        $.post("/admin/api/schema/save", values, function(data, status) {
+        $.post("/admin/api/schema/save/new", values, function(data, status) {
 
           if (status === "success") {
 
